<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pc.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_teamA_lebal"
                android:gravity="center"
                android:textSize="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:gravity="center"
                android:textSize="60dp"
                android:layout_marginBottom="24dp"
                />

            <Button
                android:id="@+id/teamA_add3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add3_lebal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="16dp"
                android:onClick="aAdd3"
                />

            <Button
                android:id="@+id/teamA_add2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add2_lebal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="16dp"
                android:onClick="aAdd2"
                />

            <Button
                android:id="@+id/teamA_add1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add1_lebal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="16dp"
                android:onClick="aAdd1"
                />


        </LinearLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="345dp"
            android:background="#686868" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_teamB_lebal"
                android:gravity="center"
                android:textSize="16dp"
                android:paddingTop="16dp"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="60dp"
                android:gravity="center"
                android:layout_marginBottom="24dp"
                />

            <Button
                android:id="@+id/teamB_add3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add3_lebal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="16dp"
                android:onClick="bAdd3"
                />

            <Button
                android:id="@+id/teamB_add2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add2_lebal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="16dp"
                android:onClick="bAdd2"
                />

            <Button
                android:id="@+id/teamB_add1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add1_lebal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="16dp"
                android:onClick="bAdd1"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_reset_lebal"
        android:onClick="resetOrz"
        />

</RelativeLayout>
